# balapan

./: .env.example  .gitignore  pyproject.toml  requirements.txt
config/: gunicorn.conf.py  project.conf
src/core/: settings.py  urls.py
src/story/: admin.py  models.py  serializers.py  urls.py  views.py
src/story/migrations/: 0001_initial.py  0002_alter_story_options.py  0002_story_audio.py  0003_alter_story_file_alter_story_image.py
src/word/: models.py  serializers.py  urls.py  views.py
src/word/migrations/: 0001_initial.py  0002_alter_word_file.py  0002_word_audio.py  0003_alter_category_options.py
